# compare_engagement_labserver

./: .gitmodules  README.md  deploy_msgs.sh  docker-compose.yml  tiago_online_analyse.py
analyze/: Dockerfile  entrypoint.sh  grad_descent.py  plot_results.py  stocastic_torch.py  train_all.py
compare/: Dockerfile  README.md  entrypoint.sh  try.py
compare/catkin_ws/src/compare/: CMakeLists.txt  package.xml
compare/catkin_ws/src/compare/src/: create_db.py  evaluate_corr.py  optimizer.py  run.py
core/: Dockerfile  docker-compose.yml  entrypoint.sh
csc_random_params_60sec/: engagement_data_1730241307.csv  engagement_data_1730244560.csv  engagement_data_1730249346.csv  engagement_data_1730253546.csv  engagement_data_1730257746.csv  engagement_data_1730261946.csv  engagement_data_1730266146.csv  engagement_data_1730270346.csv  engagement_data_1730274546.csv  engagement_data_1730278746.csv  engagement_data_1730282946.csv  engagement_data_1730287146.csv  engagement_data_1730291346.csv  engagement_data_1730295546.csv  engagement_data_1730299746.csv  engagement_data_1730303946.csv  engagement_data_1730308146.csv  engagement_data_1730312346.csv  engagement_data_1730316546.csv  engagement_data_1730320746.csv  engagement_data_1730324946.csv  engagement_data_1730329146.csv  engagement_data_1730333346.csv  engagement_data_1730337546.csv  engagement_data_1730341746.csv  engagement_data_1730345946.csv  engagement_data_1730350146.csv  engagement_data_1730354346.csv  engagement_data_1730358546.csv  (+8 more)
dataset/: README.md  (+3 more)
eng_5/grace_common_msgs_backup/: CMakeLists.txt  package.xml
(+594 files in other folders)
